<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/note_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>


        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />

        <Button
            android:id="@+id/rename_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rename" />

        <Button
            android:id="@+id/link_to_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_to_task" />

    </LinearLayout>

</androidx.cardview.widget.CardView>