...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/textViewTitle"
            android:layout_above="@id/addTaskButton"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <Button
...
